# software_engineering

./: README.md
1/: readme.md  workspace.dsl
2/: Dockerfile  Recipe-Management-API.postman-collection.json  readme.md
2/src/: main.cpp
2/src/app/: Application.hpp
2/src/auth/: JwtMiddleware.hpp
2/src/domain/dto/: RecipeDTO.hpp  UserDTO.hpp
2/src/domain/entities/: Recipe.hpp  User.hpp
2/src/http/handlers/: AuthHandler.hpp  RecipeHandler.hpp  SwaggerUIHandler.hpp  UserHandler.hpp
2/src/repository/: RecipeRepository.hpp  UserRepository.hpp
2/src/service/: RecipeService.hpp
3/: CMakeLists.txt  docker-compose.yaml  readme.md
3/src/app/: Application.hpp
3/src/domain/dto/: IngredientDTO.hpp
3/src/http/: BaseHandler.hpp
3/src/http/exceptions/: ConflictException.hpp
3/src/http/handlers/: SwaggerHandler.hpp
3/src/service/: AuthService.hpp  RecipeService.hpp
4/: .dockerignore  CMakeLists.txt  Dockerfile  data.sql  docker-compose.yaml  optimization.md  queries.sql  readme.md  schema.sql
4/src/: main.cpp  swagger.yaml
4/src/app/: Application.hpp
4/src/db/: MongoInitializer.hpp  database.h
4/src/domain/entities/: Ingredient.hpp
4/src/http/handlers/: IngredientHandler.hpp  SwaggerHandler.hpp
4/src/repository/: RecipeRepositoryMongo.hpp  UserRepository.hpp
4/src/service/: RecipeService.hpp
5/: CMakeLists.txt  docker-compose.yaml  performance_design.md  readme.md  swagger.yaml
5/src/: main.cpp
5/src/app/: Application.hpp
5/src/cache/: CacheService.hpp  RateLimiter.hpp
5/src/http/: Router.hpp
5/src/http/exceptions/: NotFoundException.hpp  UnauthorizedException.hpp
5/src/http/handlers/: IngredientHandler.hpp  NotFoundHandler.hpp  RecipeHandler.hpp
5/src/repository/: RecipeRepository.hpp  UserRepository.hpp
5/src/service/: RecipeService.hpp  UserService.hpp
5/src/utils/: JsonUtils.hpp
6/: CMakeLists.txt  Dockerfile  Dockerfile.api  Dockerfile.consumer  docker-compose.yaml  readme.md  workspace.dsl
6/src/app/: Application.hpp
6/src/consumer/: main.cpp
6/src/http/: BaseHandler.hpp  Router.hpp
6/src/http/handlers/: IngredientHandler.hpp  RecipeHandler.hpp  UserHandler.hpp
6/src/kafka/: RecipeConsumer.cpp  RecipeConsumer.hpp  RecipeProducer.cpp  RecipeProducer.hpp
6/src/service/: RecipeService.cpp  RecipeService.hpp
6/src/utils/: JsonUtils.hpp
